fix overlap navbar

--- a/src/common/components/MainContainer/styles.module.css
+++ b/src/common/components/MainContainer/styles.module.css
@@ -2,3 +2,7 @@
   margin-top: 1em !important;
   color: #4080b7;
 }
+
+.mainContainer {
+  background-color: #ffffff;
+}
