--- a/src/common/components/NavBar/style.module.css
+++ b/src/common/components/NavBar/style.module.css
@@ -5,6 +5,7 @@
   z-index: 1;
   top: 0;
   left: 0;
+  background-color: #ffffff;
   border-right: 4px solid #f6f6f6;
 }
 
