--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 body {
+  background-color: #ffffff !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.main-container {
+  margin-left: 60px !important;
 }
 
 #root {
